--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,15 +6,15 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/app_icon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-7245602797811817~6821353940"/>
-        <activity android:name=".SplashActivity"
+        <activity android:name="com.jun.vacancyclassroom.SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
             <action android:name="android.intent.action.MAIN" />
@@ -22,8 +22,8 @@
             <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Test" />
-        <activity android:name=".MainActivity" />
+        <activity android:name="com.jun.vacancyclassroom.Test" />
+        <activity android:name="com.jun.vacancyclassroom.MainActivity" />
     </application>
 
 </manifest>
