--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.example.vacancyclassroom">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/app_icon"
@@ -11,15 +12,20 @@
         android:roundIcon="@mipmap/app_icon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name="com.jun.vacancyclassroom.TimeTableActivity"></activity>
+
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-7245602797811817~6821353940"/>
-        <activity android:name="com.jun.vacancyclassroom.SplashActivity"
-            android:screenOrientation="portrait">
-            <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            android:value="ca-app-pub-7245602797811817~6821353940" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
+        <activity
+            android:name="com.jun.vacancyclassroom.SplashActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme_notitle">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name="com.jun.vacancyclassroom.Test" />
