--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,10 @@
         android:roundIcon="@mipmap/app_icon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.jun.vacancyclassroom.TimeTableActivity"
-            android:screenOrientation="portrait"></activity>
+        <activity android:name="com.jun.vacancyclassroom.BuildingActivity"></activity>
+        <activity
+            android:name="com.jun.vacancyclassroom.TimeTableActivity"
+            android:screenOrientation="portrait" />
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
@@ -29,10 +31,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.jun.vacancyclassroom.Test"
-            android:screenOrientation="portrait"/>
-        <activity android:name="com.jun.vacancyclassroom.MainActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name="com.jun.vacancyclassroom.Test"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.jun.vacancyclassroom.MainActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
