--- a/OlicMain/app/src/main/AndroidManifest.xml
+++ b/OlicMain/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 
     <application
         android:name="com.jun.vacancyclassroom.Myapplication"
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
