--- a/OlicMain/app/build.gradle
+++ b/OlicMain/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.jun.vacancyclassroom"
-        minSdkVersion 23
-        targetSdkVersion 28
+        minSdkVersion 24
+        targetSdkVersion 29
         versionCode 24
         versionName "1.3.2"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -37,5 +37,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+
+    implementation 'com.github.Sky-Titan:CollegeTimeTableLayout:0.1-beta'
     implementation files('libs/jsoup-1.11.3.jar')
 }
