--- a/OlicMain/app/src/main/AndroidManifest.xml
+++ b/OlicMain/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.vacancyclassroom">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,7 +14,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/app_icon_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:replace="android:roundIcon,android:icon">
         <activity android:name="com.jun.vacancyclassroom.activity.LoadingActivity"></activity>
         <activity android:name="com.jun.vacancyclassroom.activity.BuildingActivity" />
         <activity
